--- a/public/css/checkout.css
+++ b/public/css/checkout.css
@@ -45,10 +45,35 @@ vertical-align:bottom;
 }
 .onscroll {
   overflow: scroll;
+  margin-left: 30px;
 
 }
+.onscroll .check-price {
+  position: relative;
+  left: 11rem;
+  text-align: left;
+}
+.onscroll .check-pname {
+  text-align: left;
+}  
 /*********************checkout_end****************/
 
+@media screen and (max-width : 1366px){
+  .check-pname {
+    font-size: 16px;
+  }
+  .check-price {
+    font-size: 16px;
+  }
+  .check-dpname {
+    font-size: 16px;
+  }
+  .onscroll .check-price {
+    position: relative;
+    left: 9.4rem;
+    text-align: left;
+  }
+}
 
 
 @media screen and (max-width : 767px){
@@ -75,7 +100,7 @@ margin-top:15px!important;
  }
 .checkout_1r1i  h4{
  margin-top:15px!important;
- }
+}
  
  
 }
@@ -293,7 +318,7 @@ h6.text-right {
 .move-to-center {
   position: relative;
   bottom: 2rem;
-  left: 9rem;
+  left: 10rem;
 }
 .size-height {
   height: 10px;
@@ -494,7 +519,7 @@ img.cod-icon {
   position: relative;
   left: 26rem;
   bottom: 5rem;
-  width: 88%;
+  width: 24%;
 }
 .ship h5 {
   position: relative;
@@ -531,6 +556,20 @@ img.modal-payment {
   left: 200px;
   top: -10px;
 }
+.check-pname {
+  font-size: 25px;
+}
+.check-price {
+  font-size: 25px;
+}
+.check-dpname {
+  font-size: 25px;
+}
+.onscroll .check-price {
+  position: relative;
+  left: 11rem;
+  text-align: left;
+}
 }
 
 
@@ -556,7 +595,7 @@ section#center {
   width: 1000px;
   margin-top: 7rem;
   position: relative;
-  left: -9rem;
+  left: -13rem;
   border-style: solid;
 }
 
@@ -578,12 +617,12 @@ h6.text-right {
 h4.check-title-size {
   font-size: 40px;
   position: relative;
-  left: -109px;
+  left: 0px;
 }
 ._center {
   position: relative;
-  left: -5rem;
-  bottom: 7rem;
+  left: 0rem;
+  bottom: 0rem;
   width: 88%;
   font-size: 44px;
 }
@@ -720,6 +759,31 @@ img.modal-payment {
   border-style: solid;
   border-color: black;
   font-size: 40px;
+}
+.check-pname {
+  font-size: 32px;
+  position: relative;
+  left: 4rem;
+}
+.check-price {
+  font-size: 32px;
+}
+.check-dpname {
+  font-size: 32px;
+  position: relative;
+  left: 4rem;
+}
+.onscroll .check-price {
+  position: relative;
+  left: 22rem;
+  text-align: left;
+}
+.container {
+  width: 1458px;
+}
+.des-logo img {
+  width: 320px;
+  /* margin-top: 75px; */
 }
 }
 
@@ -866,7 +930,7 @@ section#center {
   width: 1000px;
   margin-top: 7rem;
   position: relative;
-  left: -9rem;
+  left: -13rem;
   border-style: solid;
 }
 
@@ -888,12 +952,12 @@ h6.text-right {
 h4.check-title-size {
   font-size: 40px;
   position: relative;
-  left: -109px;
+  /* left: -109px; */
 }
 ._center {
-  position: relative;
+  /* position: relative;
   left: -5rem!important;
-  bottom: 7rem!important;
+  bottom: 7rem!important; */
   width: 88%;
   font-size: 44px;
 }
@@ -1071,8 +1135,8 @@ h4.check-title-size {
 }
 ._center {
   position: relative;
-  left: -5rem;
-  bottom: 7rem;
+  left: 0rem;
+  bottom: 0rem;
   width: 88%;
   font-size: 44px;
 }
@@ -1194,9 +1258,9 @@ h4.check-title-size {
   border-style: solid;
 }
 ._center {
-  position: relative;
+  /* position: relative;
   left: -5rem;
-  bottom: 7rem;
+  bottom: 7rem; */
   width: 88%;
   font-size: 44px;
 }
@@ -1211,9 +1275,32 @@ h4.check-title-size {
 h4.check-title-size {
   font-size: 40px;
   position: relative;
-  left: -136px;
+  left: 0px;
 }
-
+.check-pname {
+  font-size: 32px;
+  position: relative;
+  left: 4rem;
+}
+.check-price {
+  font-size: 32px;
+}
+.check-dpname {
+  font-size: 32px;
+  position: relative;
+  left: 4rem;
+}
+.onscroll .check-price {
+  position: relative;
+  left: 22rem;
+  text-align: left;
+}
+.headmenu .des-logo .logos {
+  margin-left: -50px;
+}
+.mgt a {
+  display: none;
+}
 
 }
 
@@ -1235,7 +1322,7 @@ section#center {
   width: 1000px;
   margin-top: 7rem;
   position: relative;
-  /* left: -13rem; */
+  left: -20rem;
   border-style: solid;
 }
 
@@ -1261,10 +1348,12 @@ h4.check-title-size {
 }
 ._center {
   position: relative;
-  left: 7rem;
-  bottom: -2rem;
-  width: 88%;
+  left: 0rem;
+  /* bottom: 0rem; */
+  width: 45%;
   font-size: 44px;
+  margin-bottom: 4rem;
+  margin-top: 2rem;
 }
 
 h6.c-size {
@@ -1380,9 +1469,103 @@ h5.normal.ship-bot {
   left: 20rem;
   font-size: 30px;
 }
+.move-flex {
+  width: 100%;
+}
+.container {
+  width: 1280px;
+}
+.check-pname {
+  font-size: 32px;
+  position: relative;
+  left: 4rem;
+}
+.check-price {
+  font-size: 32px;
+}
+.check-dpname {
+  font-size: 32px;
+  position: relative;
+  left: 4rem;
+}
+.onscroll .check-price {
+  position: relative;
+  left: 22rem;
+  text-align: left;
+}
+.move-to-center {
+  position: relative;
+  bottom: 2rem;
+  left: 0rem;
+}
+/* .des-logo img {
+  width: 400px;
+} */
 
 }
 
+@media only screen 
+and (max-width: 568px)
+and (min-width: 320px)
+and (orientation: landscape)
+{
+  h4.check-title-size {
+    left: -150px;
+}
+._center {
+  position: relative;
+  top: 2rem;
+  width: 40%;
+  font-size: 44px;
+}
+
+}
+
+@media only screen 
+and (max-width: 731px)
+and (min-width: 411px)
+and (orientation: landscape)
+{
+  h4.check-title-size {
+    position: relative;
+    left: -150px;;
+}
+._center {
+  width: 40%;
+  position: relative;
+  top: 2rem;
+}
+.mgt a {
+  display: none;
+}
+.check_rm.clearfix {
+  position: relative;
+  left: -5px;
+} 
+
+}
+
+/* @media only screen 
+and (max-width: 812px)
+and (min-width: 375px)
+and (orientation: landscape)
+{
+  img.footer-logos {
+    display: none;
+
+}
+.footer-title-tweets {
+  display: none;
+}
+.footer-tweet-time{
+  display: none;
+}
+.footer-gallery {
+  display: none;
+}
+.footer-desc {
+  font-size: 26px;
+} */
 @media only screen 
 and (max-width: 300px)
 and (min-width: 280px)
