--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -95,6 +95,9 @@
 		width: 90%;
 		margin: 0 5%;
 	}
+	.item-on-cart {
+		height: 188px;
+	}
 	/*.sub-menu .dropdown,.inputs {
 		display: none;
 	}
@@ -675,11 +678,16 @@
 	}
 	.cart-icon {
 		position: absolute;
-		width: 50px;
-		height: 26px;
-		top: 10px;
-		margin: 14% 34%;
-		display: none;
+		/* width: 50px;
+		height: 26px; */
+		top: unset;
+		bottom: 92px;
+		display: block;
+		margin: 0;
+		background: #2a2c2f;
+	}
+	.shop-cart-icon i {
+		display: block;
 	}
 	thead td {
 		padding: 10px 38px;
@@ -716,9 +724,9 @@
 	}
 }
 @media screen and (max-width: 800px){
-	.cart-icon {
+	/* .cart-icon {
 		margin: 31% 43%;
-	}
+	} */
 	.shop-images-lechon img {
 		height: 189px;
 		width: 189px;
@@ -769,6 +777,17 @@
 	}
 	.librebais a {
 		font-size: 27px;
+	}
+	.librebais td {
+		text-align: unset;
+	}
+	.carted-item-name {
+		width: 100%;
+		text-align: center;
+	}
+	.librebais td {
+		width: 15%;
+		text-align: center;
 	}
 	.apply-coupon button, .update-cart button {
 		font-size: 22px;
@@ -1464,7 +1483,7 @@
 		font-size: 33px;
 	}
 	thead td {
-		padding: 10px 33px;
+		padding: 11px 38px;
 	}
 	.shipping_ {
 		width: 45%;
@@ -1475,14 +1494,18 @@
 	.order-conts {
 		width: 100%;
 	}
+	.cart-icon {
+		width: 48px;
+		height: 48px;
+	}
 	.shop-cart-icon i {
 		position: absolute;
 		top: 0;
-		margin: 49px 64px;
-		display: none;
+		/* display: none; */
 		color: #ccc;
-		font-size: 36px;
-		padding: 18px;
+		/* font-size: 36px; */
+		font-size: 26px;
+		padding: 11px;
 		border-radius: 50%;
 	}
 	.orderNow {
@@ -1495,6 +1518,7 @@
 	}
 	td.carted-items {
 		display: block;
+		width: 100%;
 	}
 	.shipping-info {
 		line-height: 2.75rem;
@@ -1561,7 +1585,7 @@
 		width: 150px;
 	}
 	.shop-cart-icon i {
-		margin: 31px 48px;
+		padding: 12px 8px;
 	}
 	.shop-sorting {
 		font-size: 16px;
