--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -200,10 +200,16 @@
 		border: solid #c4a256;
 	}
 	.shop-items {
-		padding: 11px 6px;
+		padding: 11px 4px;
 	}
 	
 }
+@media screen and (max-width: 1404px) {
+	.shop-item-image img {
+		width: 260px;
+	}
+}
+
 @media screen and (max-width: 1220px){
 	.headmenu {
 		display: flex;
@@ -298,7 +304,7 @@
 		justify-content: space-around;
 	}
 	.shop-item-image img {
-		width: 200px;
+		width: 240px;
 	}
 	.shop-anchors-filter {
 		margin: 2.5625rem 3.8rem;
@@ -325,6 +331,9 @@
 @media screen and (max-width: 1150px) {
 	.shop-items-conts {
 		width: 100%;
+	}
+	.shop-item-image img {
+		width: 197px;
 	}
 }
 @media screen and (max-width: 1066px) {
@@ -468,7 +477,7 @@
 }
 @media screen and (max-width: 1024px) {
 	.shop-sub-container3 {
-		width: 76%;
+		width: 85%;
 	}
 	.shop-anchors {
 	    font-size: 32px;
@@ -483,7 +492,7 @@
 		font-size: 22px;
 	}
 	.shop-images img {
-		width: 232px;
+		width: 275px;
 		border-radius: 6px;
 	}
 	/* .shop-conts {
@@ -681,7 +690,8 @@
 		/* width: 50px;
 		height: 26px; */
 		top: unset;
-		bottom: 92px;
+		bottom: 59px;
+		left: 86px;
 		display: block;
 		margin: 0;
 		background: #2a2c2f;
