--- a/public/sass/bodystyle.css
+++ b/public/sass/bodystyle.css
@@ -249,7 +249,7 @@ i.fa.fa-star {
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  /*width: 85%;*/
+  width: 111%;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   /* justify-content: space-between; */
@@ -280,7 +280,7 @@ i.fa.fa-star {
 }
 
 .shop-items {
-  padding: 11px 10px;
+  padding: 11px 6px;
   position: relative;
 }
 
