--- a/public/sass/bodystyle.css
+++ b/public/sass/bodystyle.css
@@ -377,10 +377,10 @@ i.fa.fa-star {
   border-radius: 50%;
 }*/
 
-.shop-cart-icon i:hover {
+/*.shop-cart-icon i:hover {
   color: #fff;
   background: #c4a265;
-}
+}*/
 
 /*.shop-cart-icon i:hover*/
 .shop-item-image {
