--- a/public/css/style.css
+++ b/public/css/style.css
@@ -969,15 +969,16 @@ input._qty {
     background: #C4A265;
     border: solid #C4A265;
     border-radius: 5px;
-    padding: 14px 100px;
+    padding: 14px 59px;
     cursor: pointer;
 }
 .view-cart-sidebar button {
     border: solid #C4A265;
     background: #dedcdc;
     border-radius: 5px;
-    padding: 14px 100px;
+    padding: 14px 59px;
     cursor: pointer;
+    display: none;
 }
 .check-out-sidbar, .view-cart-sidebar {
     text-align: center;
@@ -1535,4 +1536,10 @@ button.cartUpdate:hover {
 }
 .alertify-notifier {
   color: #fff;
+}
+.__bottons {
+  display: flex;
+  margin: 0 auto;
+  width: 84%;
+  justify-content: center;
 }
