--- a/public/sass/bodystyle.css
+++ b/public/sass/bodystyle.css
@@ -684,7 +684,7 @@ button.addcart {
 }
 
 input {
-  padding: 12px 20px;
+  /*padding: 12px 20px;*/
   margin: 8px 0;
   display: inline-block;
   border: 1px solid #cf9d71;
