--- a/public/css/myorder.css
+++ b/public/css/myorder.css
@@ -34,3 +34,93 @@ td.td2 {
 .order-stat a:hover {
     color: #c4a256;
 }
+
+
+img.avatar.img-circle1 {
+    position: relative;
+    width: 300px;
+    margin-left: 31%;
+    margin-right: 22%;
+}
+
+.active.container {
+    width: 700px;
+    height: 250px;
+    background-image: linear-gradient(to right, #fdc912 , #feba12);
+    margin-left: 30%;
+}
+
+img.line {
+    position: absolute;
+    top: 33rem;
+    left: 39rem;
+}
+
+.data-container {
+    width: 700px;
+    height: 500px;
+    background-color: #f9f9f9;
+    margin-left: 30%;
+    margin-top: 1rem;
+    border-color: #fdc7125e;
+    border-style: solid;
+}
+
+h5.time {
+    font-size: 22px;
+    margin-left: 40%;
+}
+h1.mins-title {
+    font-size: 50px;
+}
+
+tr.tablerow {
+    font-size: 23px;
+    font-weight: bold;
+}
+
+td.margin-toptr {
+    position: relative;
+    top: 3rem;
+}
+.data-p {
+    margin-left: 4rem;
+    margin-right: 4rem;
+}
+
+td.margin-toptr.pp {
+    position: relative;
+    left: 16rem;
+}
+td.margin-toptr.qp {
+    position: relative;
+    left: 6rem;
+}
+td.check-data1 {
+    font-size: 22px;
+    position: relative;
+    top: 4rem;
+}
+td.check-quantz1 {
+    position: relative;
+    top: 4rem;
+    left: 8rem;
+}
+td.check-price1 {
+    position: relative;
+    bottom: -4rem;
+    left: 16rem;
+}
+button.receive {
+    background-color: #fdc512;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    position: relative;
+    top: 9rem;
+    margin-left: 40%;
+}
