--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,12 +122,10 @@ img.logos {
 	color: white;
 	margin-left: 30px;
 }
-
 .headmenu .sub-menu .des5 {
 	color: white;
 	margin-left: 30px;
 }
-
 .headmenu .sub-menu .des6 {
 	color: white;
 	margin-left: 30px;
@@ -596,7 +594,7 @@ img.footer-logos {
     width: 80%;
 }
 .footer-container {
-    height: 50%;
+    height: auto;
     /*width: 100%;*/
     display: flex;
     justify-content: center;
